--- a/hostapd.conf
+++ b/hostapd.conf
@@ -5,6 +5,7 @@
 # Access Point ID to be used in IEEE 802.11 management frames
 ssid=ElendVenture
 interface=wlp2s0
+# bridge=sbr0
 
 #------------------------------------------------------------------------------
 # Send empty SSID in beacons and ignore probe request frames that do not
