refactor config, scripts and networking

--- a/hostapd.conf
+++ b/hostapd.conf
@@ -4,8 +4,8 @@
 #------------------------------------------------------------------------------
 # Access Point ID to be used in IEEE 802.11 management frames
 ssid=ElendVenture
-interface=wlp2s0
-# bridge=sbr0
+interface=wap
+# bridge=lbr1
 
 #------------------------------------------------------------------------------
 # Send empty SSID in beacons and ignore probe request frames that do not
