config refactor and networking cleanup

--- a/hostapd.conf
+++ b/hostapd.conf
@@ -3,7 +3,7 @@
 
 #------------------------------------------------------------------------------
 # Access Point ID to be used in IEEE 802.11 management frames
-ssid=ElendVenture
+ssid=
 interface=wap
 # bridge=lbr1
 
@@ -145,7 +145,7 @@ wpa_key_mgmt=SAE
 # so the PSK changes when ASCII passphrase is used and the SSID is changed.
 # wpa_psk (dot11RSNAConfigPSKValue)
 # wpa_passphrase (dot11RSNAConfigPSKPassPhrase): secret passphrase
-wpa_passphrase=1234567890
+wpa_passphrase=
 wpa_group_rekey=1800
 
 #------------------------------------------------------------------------------
