--- a/hostapd/wap1.conf
+++ b/hostapd/wap1.conf
@@ -3,9 +3,15 @@
 
 #------------------------------------------------------------------------------
 # Access Point ID to be used in IEEE 802.11 management frames
-ssid=
-interface=wap
+interface=wap1
 # bridge=lbr1
+
+#------------------------------------------------------------------------------
+# Interface for separate control program. If this is specified, hostapd
+# will create this directory and a UNIX domain socket for listening to 
+# requests from external programs (CLI/GUI, etc.) for status information
+# and configuration. 
+ctrl_interface=/var/run/hostapd
 
 #------------------------------------------------------------------------------
 # Send empty SSID in beacons and ignore probe request frames that do not
@@ -26,21 +32,11 @@ ignore_broadcast_ssid=0
 driver=nl80211
 
 #------------------------------------------------------------------------------
-# Operation mode (a = IEEE 802.11a (5 GHz), b = IEEE 802.11b (2.4 GHz),
-# g = IEEE 802.11g (2.4 GHz), ad = IEEE 802.11ad (60 GHz); a/g options are used
-# with IEEE 802.11n (HT), too, to specify band). For IEEE 802.11ac (VHT), this
-# needs to be set to hw_mode=a. When using ACS (see channel parameter), a
-# special value "any" can be used to indicate that any support band can be used.
-# This special case is currently supported only with drivers with which
-# offloaded ACS is used. Default: IEEE 802.11b
-hw_mode=a
-
-#------------------------------------------------------------------------------
 # Country code (ISO/IEC 3166-1). Used to set regulatory domain.
-country_code=00
+country_code=US
 
 #------------------------------------------------------------------------------
-# ieee80211d: WLAN amendment that specifies extensions which adds support for 
+# ieee80211d: WLAN amendment that specifies extensions which adds support for
 # "additional regulatory domains" and defines the physical layer requirements
 # Channelization, Hopping patterns, and New values for current MIB attributes.
 # 0 = disabled (default)
@@ -48,12 +44,12 @@ country_code=00
 ieee80211d=1
 
 #------------------------------------------------------------------------------
-# ieee80211h: WLAN amendment that specifies extensions which enforces dynamic 
+# ieee80211h: WLAN amendment that specifies extensions which enforces dynamic
 # frequency selection (DFS) and transmit power control (TPC) mechanisms to meet
 # European regulations
 # 0 = disabled
 # 1 = enabled (default)
-ieee80211h=0
+#ieee80211h=0
 
 #------------------------------------------------------------------------------
 # ieee80211n: Whether IEEE 802.11n (HT) is enabled
@@ -62,7 +58,7 @@ ieee80211h=0
 # Note: You will also need to enable WMM for full HT functionality.
 # Note: hw_mode=g (2.4 GHz) and hw_mode=a (5 GHz) is used to specify the band.
 ieee80211n=1
-#ht_capab=[HT40+][SHORT-GI-20][SHORT-GI-40][TX-STBC][RX-STBC1][DSSS_CK-40][LDPC][MAX-AMSDU-7935]
+ht_capab=[HT40+][HT40-][SHORT-GI-20][SHORT-GI-40][MAX-AMSDU-7935][DSSS_CCK-40]
 
 #------------------------------------------------------------------------------
 # ieee80211ac: Whether IEEE 802.11ac (VHT) is enabled
@@ -70,8 +66,8 @@ ieee80211n=1
 # 1 = enabled
 # Note: You will also need to enable WMM for full VHT functionality.
 # Note: hw_mode=a is used to specify that 5 GHz band is used with VHT.
-#ieee80211ac=1
-#vht_capab=[HTC-VHT][SOUNDING-DIMENSION-2][TX-STBC-2BY1][RX-STBC-1][SU-BEAMFORMEE][MAX-A-MPDU-LEN-EXP7][RX-ANTENNA-PATTERN][TX-ANTENNA-PATTERN][SHORT-GI-80][RXLDPC]
+# ieee80211ac=1
+# vht_capab=[MAX-MPDU-11454][SHORT-GI-80][TX-STBC-2BY1][RX-STBC-1][HTC-VHT][MAX-A-MPDU-LEN-EXP7]
 
 #------------------------------------------------------------------------------
 # 0 = 20 or 40 MHz operating Channel width
@@ -131,12 +127,9 @@ auth_algs=1
 # This field is a bit field that can be used to enable WPA (IEEE 802.11i/D3.0)
 # and/or WPA2 (full IEEE 802.11i/RSN):
 # 1: bit0 = WPA
-# 2: bit1 = IEEE 802.11i/RSN (WPA2) (dot11RSNAEnabled)
+# 2: bit1 = IEEE 802.11i/RSN (WPA2/WPA3) (dot11RSNAEnabled)
 # Note that WPA3 is also configured with bit1 since it uses RSN just like WPA2.
-# In other words, for WPA3, wpa=2 is used the configuration (and
-# wpa_key_mgmt=SAE for WPA3-Personal instead of wpa_key_mgmt=WPA-PSK).
 wpa=2
-wpa_key_mgmt=SAE
 
 #------------------------------------------------------------------------------
 # WPA pre-shared keys for WPA-PSK. This can be either entered as a 256-bit
@@ -145,7 +138,6 @@ wpa_key_mgmt=SAE
 # so the PSK changes when ASCII passphrase is used and the SSID is changed.
 # wpa_psk (dot11RSNAConfigPSKValue)
 # wpa_passphrase (dot11RSNAConfigPSKPassPhrase): secret passphrase
-wpa_passphrase=
 wpa_group_rekey=1800
 
 #------------------------------------------------------------------------------
@@ -233,13 +225,6 @@ fragm_threshold=-1
 macaddr_acl=0
 
 #------------------------------------------------------------------------------
-# Interface for separate control program. If this is specified, hostapd
-# will create this directory and a UNIX domain socket for listening to 
-# requests from external programs (CLI/GUI, etc.) for status information
-# and configuration. 
-ctrl_interface=/var/run/hostapd
-
-#------------------------------------------------------------------------------
 # Levels (minimum value for logged events):
 #  0 = verbose debugging
 #  1 = debugging
@@ -251,3 +236,24 @@ logger_syslog=-1
 logger_syslog_level=2
 logger_stdout=-1
 logger_stdout_level=2
+
+#------------------------------------------------------------------------------
+# Operation mode:
+#   a = IEEE 802.11a (5 GHz)
+#   b = IEEE 802.11b (2.4 GHz)
+#   g = IEEE 802.11g (2.4 GHz)
+#  ad = IEEE 802.11ad (60 GHz)
+# Note that a/g options are used with IEEE 802.11n (HT) to specify band). 
+# For IEEE 802.11ac (VHT), this needs to be set to hw_mode=a. 
+# When using ACS (see channel parameter), a special value "any" can be used 
+# to indicate that any support band can be used.
+# This special case is currently supported only with drivers with which|
+# offloaded ACS is used. Default: IEEE 802.11b
+hw_mode=g
+# For WPA3, wpa_key_mgmt is set to SAE instead of WPA-PSK for WPA2
+wpa_key_mgmt=SAE
+# wpa_key_mgmt=WPA-PSK
+
+# Access Point
+ssid=
+wpa_passphrase=
