Update for MT76xx

--- a/hostapd/wap0.conf
+++ b/hostapd/wap0.conf
@@ -58,8 +58,12 @@ ieee80211d=1
 # Note: You will also need to enable WMM for full HT functionality.
 # Note: hw_mode=g (2.4 GHz) and hw_mode=a (5 GHz) is used to specify the band.
 ieee80211n=1
-ht_capab=[LDPC][HT40+][HT40-][GF][SHORT-GI-20][SHORT-GI-40][MAX-AMSDU-3839]
-# ht_capab=[LDPC][HT40-][HT40+][GF][SHORT-GI-20][SHORT-GI-40][TX-STBC][RX-STBC1][MAX-AMSDU-3839][40-INTOLERANT]
+# mt7612u - mt7610u
+# ht_capab=[HT40+][HT40-][GF][SHORT-GI-20][SHORT-GI-40]
+#
+# rtl8812au - rtl8811au - rtl8811cu
+ht_capab=[LDPC][HT40+][HT40-][SHORT-GI-20][SHORT-GI-40][MAX-AMSDU-3839]
+# ht_capab=[LDPC][HT40-][HT40+][GF][SHORT-GI-20][SHORT-GI-40][TX-STBC][RX-STBC1][MAX-AMSDU-3839][40-INTOLERANT][DSSS_CCK-40]
 
 #------------------------------------------------------------------------------
 # ieee80211ac: Whether IEEE 802.11ac (VHT) is enabled
@@ -68,8 +72,8 @@ ht_capab=[LDPC][HT40+][HT40-][GF][SHORT-GI-20][SHORT-GI-40][MAX-AMSDU-3839]
 # Note: You will also need to enable WMM for full VHT functionality.
 # Note: hw_mode=a is used to specify that 5 GHz band is used with VHT.
 ieee80211ac=1
-vht_capab=[RXLDPC][SHORT-GI-80][TX-STBC-2BY1][RX-STBC-1][RX-ANTENNA-PATTERN][TX-ANTENNA-PATTERN][MAX-A-MPDU-LEN-EXP3]
-# vht_capab=[RXLDPC][SHORT-GI-80][TX-STBC-2BY1][RX-STBC-1][RX-ANTENNA-PATTERN][TX-ANTENNA-PATTERN][MAX-A-MPDU-LEN-EXP3][MAX-MPDU-3895][BF-ANTENNA-2][SOUNDING-DIMENSION-2][MU-BEAMFORMEE][VHT-LINK-ADAPT3]
+# mt7612u
+vht_capab=[RXLDPC][SHORT-GI-80][TX-STBC-2BY1][RX-STBC-1][RX-ANTENNA-PATTERN][TX-ANTENNA-PATTERN][MAX-A-MPDU-LEN-EXP3][MAX-MPDU-3895]
 
 #------------------------------------------------------------------------------
 # 0 = 20 or 40 MHz operating Channel width
@@ -254,7 +258,6 @@ logger_stdout_level=2
 hw_mode=a
 # For WPA3, wpa_key_mgmt is set to SAE instead of WPA-PSK for WPA2
 wpa_key_mgmt=SAE
-
 # Access Point
 ssid=
 wpa_passphrase=
