ht_capab and 2.4G

--- a/hostapd/wap1.conf
+++ b/hostapd/wap1.conf
@@ -62,8 +62,7 @@ ieee80211n=1
 # ht_capab=[HT40+][HT40-][GF][SHORT-GI-20][SHORT-GI-40]
 #
 # rtl8812au - rtl8811au - rtl8811cu
-ht_capab=[LDPC][HT40+][HT40-][SHORT-GI-20][SHORT-GI-40][MAX-AMSDU-3839]
-# ht_capab=[LDPC][HT40-][HT40+][GF][SHORT-GI-20][SHORT-GI-40][TX-STBC][RX-STBC1][MAX-AMSDU-3839][40-INTOLERANT][DSSS_CCK-40]
+ht_capab=[LDPC][HT40+][HT40-][GF][SHORT-GI-20][SHORT-GI-40][TX-STBC][RX-STBC1][MAX-AMSDU-3839]
 
 #------------------------------------------------------------------------------
 # ieee80211ac: Whether IEEE 802.11ac (VHT) is enabled
@@ -71,7 +70,7 @@ ht_capab=[LDPC][HT40+][HT40-][SHORT-GI-20][SHORT-GI-40][MAX-AMSDU-3839]
 # 1 = enabled
 # Note: You will also need to enable WMM for full VHT functionality.
 # Note: hw_mode=a is used to specify that 5 GHz band is used with VHT.
-ieee80211ac=1
+ieee80211ac=0
 # mt7612u
 vht_capab=[RXLDPC][SHORT-GI-80][TX-STBC-2BY1][RX-STBC-1][RX-ANTENNA-PATTERN][TX-ANTENNA-PATTERN][MAX-A-MPDU-LEN-EXP3][MAX-MPDU-3895]
 
@@ -102,17 +101,6 @@ vht_oper_chwidth=0
 # will be (2^n)-1 where n is the value given here. The allowed range for these
 # wmm_ac_??_{cwmin,cwmax} is 0..15 with cwmax >= cwmin.
 wmm_enabled=1
-
-#------------------------------------------------------------------------------
-# Channel number (IEEE 802.11)
-# (default: 0, i.e., not set)
-# Please note that some drivers do not use this value from hostapd and the
-# channel will need to be configured separately with iwconfig.
-#
-# If CONFIG_ACS build option is enabled, the channel can be selected
-# automatically at run time by setting channel=acs_survey or channel=0, both of
-# which will enable the ACS survey based algorithm.
-#channel=36
 
 #------------------------------------------------------------------------------
 # IEEE 802.11 specifies two authentication algorithms. hostapd can be
@@ -242,6 +230,17 @@ logger_syslog=-1
 logger_syslog_level=2
 logger_stdout=-1
 logger_stdout_level=2
+
+#------------------------------------------------------------------------------
+# Channel number (IEEE 802.11)
+# (default: 0, i.e., not set)
+# Please note that some drivers do not use this value from hostapd and the
+# channel will need to be configured separately with iwconfig.
+#
+# If CONFIG_ACS build option is enabled, the channel can be selected
+# automatically at run time by setting channel=acs_survey or channel=0, both of
+# which will enable the ACS survey based algorithm.
+channel=6
 
 #------------------------------------------------------------------------------
 # Operation mode:
