--- a/hostapd/wap0.conf
+++ b/hostapd/wap0.conf
@@ -39,6 +39,7 @@ country_code=US
 # ieee80211d: WLAN amendment that specifies extensions which adds support for
 # "additional regulatory domains" and defines the physical layer requirements
 # Channelization, Hopping patterns, and New values for current MIB attributes.
+# advertise country code and regulatory info
 # 0 = disabled (default)
 # 1 = enabled
 ieee80211d=1
@@ -46,10 +47,65 @@ ieee80211d=1
 #------------------------------------------------------------------------------
 # ieee80211h: WLAN amendment that specifies extensions which enforces dynamic
 # frequency selection (DFS) and transmit power control (TPC) mechanisms to meet
-# European regulations
+# European regulations. DFS support is required on outdoor 5 GHz channels in
+# most countries of the world. This can be used only with ieee80211d=1.
+# DFS radar detection
 # 0 = disabled
 # 1 = enabled (default)
-#ieee80211h=0
+ieee80211h=0
+
+# Exclude DFS channels from ACS
+# This option can be used to exclude all DFS channels from the ACS channel list
+# in cases where the driver supports DFS channels.
+#acs_exclude_dfs=1
+
+#------------------------------------------------------------------------------
+# ht_capab: HT capabilities (list of flags)
+# LDPC coding capability: [LDPC] = supported
+# Supported channel width set: [HT40-] = both 20 MHz and 40 MHz with secondary
+#	channel below the primary channel; [HT40+] = both 20 MHz and 40 MHz
+#	with secondary channel above the primary channel
+#	(20 MHz only if neither is set)
+#	Note: There are limits on which channels can be used with HT40- and
+#	HT40+. Following table shows the channels that may be available for
+#	HT40- and HT40+ use per IEEE 802.11n Annex J:
+#	freq		HT40-		HT40+
+#	2.4 GHz		5-13		1-7 (1-9 in Europe/Japan)
+#	5 GHz		40,48,56,64	36,44,52,60
+#	(depending on the location, not all of these channels may be available
+#	for use)
+#	Please note that 40 MHz channels may switch their primary and secondary
+#	channels if needed or creation of 40 MHz channel maybe rejected based
+#	on overlapping BSSes. These changes are done automatically when hostapd
+#	is setting up the 40 MHz channel.
+# HT-greenfield: [GF] (disabled if not set)
+# Short GI for 20 MHz: [SHORT-GI-20] (disabled if not set)
+# Short GI for 40 MHz: [SHORT-GI-40] (disabled if not set)
+# Tx STBC: [TX-STBC] (disabled if not set)
+# Rx STBC: [RX-STBC1] (one spatial stream), [RX-STBC12] (one or two spatial
+#	streams), or [RX-STBC123] (one, two, or three spatial streams); Rx STBC
+#	disabled if none of these set
+# HT-delayed Block Ack: [DELAYED-BA] (disabled if not set)
+# Maximum A-MSDU length: [MAX-AMSDU-7935] for 7935 octets (3839 octets if not
+#	set)
+# DSSS/CCK Mode in 40 MHz: [DSSS_CCK-40] = allowed (not allowed if not set)
+# 40 MHz intolerant [40-INTOLERANT] (not advertised if not set)
+#   Indicate that 40 MHz channels should not be used in their BSS or in 
+#   surrounding networks. The bit is processed only in the 2.4 GHz band.
+# L-SIG TXOP protection support: [LSIG-TXOP-PROT] (disabled if not set)
+
+# Require stations to support HT PHY (reject association if they do not)
+#require_ht=1
+
+#------------------------------------------------------------------------------
+# Channel number (IEEE 802.11) (default: 0, i.e., not set)
+# Please note that some drivers do not use this value from hostapd and the
+# channel will need to be configured separately with iwconfig.
+#
+# If CONFIG_ACS build option is enabled, the channel can be selected
+# automatically at run time by setting channel=acs_survey or channel=0, both of
+# which will enable the ACS survey based algorithm.
+channel=6
 
 #------------------------------------------------------------------------------
 # ieee80211n: Whether IEEE 802.11n (HT) is enabled
@@ -58,11 +114,19 @@ ieee80211d=1
 # Note: You will also need to enable WMM for full HT functionality.
 # Note: hw_mode=g (2.4 GHz) and hw_mode=a (5 GHz) is used to specify the band.
 ieee80211n=1
-# mt7612u - mt7610u
-# ht_capab=[HT40+][HT40-][GF][SHORT-GI-20][SHORT-GI-40]
-#
-# rtl8812au - rtl8811au - rtl8811cu
-ht_capab=[LDPC][HT40+][HT40-][GF][SHORT-GI-20][SHORT-GI-40][TX-STBC][RX-STBC1][MAX-AMSDU-3839]
+require_ht=1
+
+# mt7612u - mt7610u (consult iw list)
+# ht_capab=[HT40+][HT40-][SHORT-GI-20][SHORT-GI-40]
+# ht_capab=[LDPC][HT40+][HT40-][SHORT-GI-20][SHORT-GI-40][TX-STBC][RX-STBC1][MAX-AMSDU-3839]
+ht_capab=[LDPC][HT40-][HT40+][SHORT-GI-20][SHORT-GI-40][TX-STBC][RX-STBC1][MAX-AMSDU-3839][DSSS_CCK-40][40-INTOLERANT]
+
+# If set non-zero, require stations to perform scans of overlapping
+# channels to test for stations which would be affected by 40 MHz traffic.
+# This parameter sets the interval in seconds between these scans. Setting this
+# to non-zero allows 2.4 GHz band AP to move dynamically to a 40 MHz channel if
+# no co-existence issues with neighboring devices are found.
+#obss_interval=0
 
 #------------------------------------------------------------------------------
 # ieee80211ac: Whether IEEE 802.11ac (VHT) is enabled
@@ -71,8 +135,16 @@ ht_capab=[LDPC][HT40+][HT40-][GF][SHORT-GI-20][SHORT-GI-40][TX-STBC][RX-STBC1][M
 # Note: You will also need to enable WMM for full VHT functionality.
 # Note: hw_mode=a is used to specify that 5 GHz band is used with VHT.
 ieee80211ac=1
-# mt7612u
-vht_capab=[RXLDPC][SHORT-GI-80][TX-STBC-2BY1][RX-STBC-1][RX-ANTENNA-PATTERN][TX-ANTENNA-PATTERN][MAX-A-MPDU-LEN-EXP3][MAX-MPDU-3895]
+require_vht=1
+# mt7612u (consult iw list)
+# vht_capab=[MAX-MPDU-3895][RXLDPC][SHORT-GI-80][TX-STBC-2BY1][RX-STBC-1][RX-ANTENNA-PATTERN][TX-ANTENNA-PATTERN][MAX-A-MPDU-LEN-EXP3]
+vht_capab=[MAX-MPDU-3895][RXLDPC][SHORT-GI-80][TX-STBC-2BY1][RX-STBC-1][RX-ANTENNA-PATTERN][TX-ANTENNA-PATTERN][MAX-A-MPDU-LEN-EXP0][BF-ANTENNA-2][SOUNDING-DIMENSION-2][MU-BEAMFORMEE][VHT-LINK-ADAPT3]
+
+# Maximum A-MPDU Length Exponent: [MAX-A-MPDU-LEN-EXP0]..[MAX-A-MPDU-LEN-EXP7]
+# Indicates the maximum length of A-MPDU pre-EOF padding that the STA can recv
+# This field is an integer in the range of 0 to 7.
+# The length defined by this field is equal to
+# 2 pow(13 + Maximum A-MPDU Length Exponent) -1 octets
 
 #------------------------------------------------------------------------------
 # 0 = 20 or 40 MHz operating Channel width
@@ -84,8 +156,11 @@ vht_oper_chwidth=1
 #------------------------------------------------------------------------------
 # center freq = 5 GHz + (5 * index)
 # So index 42 gives center freq 5.210 GHz
-# which is channel 42 in 5G band
-#vht_oper_centr_freq_seg0_idx=42
+# which is the center channel in 5G band
+# must be one of: 42 58 106 122 138 155
+# note:  picking anything but 36/42 and 149/155 is probably restricted by DFS
+# vht_oper_centr_freq_seg0_idx=42
+# vht_oper_centr_freq_seg0_idx=155
 
 #------------------------------------------------------------------------------
 # Default WMM parameters (IEEE 802.11 draft; 11-03-0504-03-000e):
@@ -230,17 +305,6 @@ logger_syslog=-1
 logger_syslog_level=2
 logger_stdout=-1
 logger_stdout_level=2
-
-#------------------------------------------------------------------------------
-# Channel number (IEEE 802.11)
-# (default: 0, i.e., not set)
-# Please note that some drivers do not use this value from hostapd and the
-# channel will need to be configured separately with iwconfig.
-#
-# If CONFIG_ACS build option is enabled, the channel can be selected
-# automatically at run time by setting channel=acs_survey or channel=0, both of
-# which will enable the ACS survey based algorithm.
-channel=0
 
 #------------------------------------------------------------------------------
 # Operation mode:
