Refactor wap to be DRY and functions for clarity

--- a/hostapd/hostapd.conf
+++ b/hostapd/hostapd.conf
@@ -2,11 +2,6 @@
 # /etc/hostapd/hostapd.conf
 
 #------------------------------------------------------------------------------
-# Access Point ID to be used in IEEE 802.11 management frames
-interface=wap0
-# bridge=lbr1
-
-#------------------------------------------------------------------------------
 # Interface for separate control program. If this is specified, hostapd
 # will create this directory and a UNIX domain socket for listening to 
 # requests from external programs (CLI/GUI, etc.) for status information
@@ -14,26 +9,11 @@ interface=wap0
 ctrl_interface=/var/run/hostapd
 
 #------------------------------------------------------------------------------
-# Send empty SSID in beacons and ignore probe request frames that do not
-# specify full SSID, i.e., require stations to know SSID.
-# 0 = disabled (default)
-# 1 = send empty (length=0) SSID in beacon and ignore probe request for
-#     broadcast SSID
-# 2 = clear SSID (ASCII 0), but keep the original length (this may be required
-#     with some clients that do not support empty SSID) and ignore probe
-#     requests for broadcast SSID
-ignore_broadcast_ssid=0
-
-#------------------------------------------------------------------------------
 # Driver interface type (hostap/wired/none/nl80211/bsd);
 # default: hostap). nl80211 is used with all Linux mac80211 drivers.
 # Use driver=none if building hostapd as a standalone RADIUS server that does
 # not control any wireless/wired driver.
 driver=nl80211
-
-#------------------------------------------------------------------------------
-# Country code (ISO/IEC 3166-1). Used to set regulatory domain.
-country_code=US
 
 #------------------------------------------------------------------------------
 # ieee80211d: WLAN amendment that specifies extensions which adds support for
@@ -52,60 +32,12 @@ ieee80211d=1
 # DFS radar detection
 # 0 = disabled
 # 1 = enabled (default)
-ieee80211h=0
+ieee80211h=1
 
 # Exclude DFS channels from ACS
 # This option can be used to exclude all DFS channels from the ACS channel list
 # in cases where the driver supports DFS channels.
 #acs_exclude_dfs=1
-
-#------------------------------------------------------------------------------
-# ht_capab: HT capabilities (list of flags)
-# LDPC coding capability: [LDPC] = supported
-# Supported channel width set: [HT40-] = both 20 MHz and 40 MHz with secondary
-#	channel below the primary channel; [HT40+] = both 20 MHz and 40 MHz
-#	with secondary channel above the primary channel
-#	(20 MHz only if neither is set)
-#	Note: There are limits on which channels can be used with HT40- and
-#	HT40+. Following table shows the channels that may be available for
-#	HT40- and HT40+ use per IEEE 802.11n Annex J:
-#	freq		HT40-		HT40+
-#	2.4 GHz		5-13		1-7 (1-9 in Europe/Japan)
-#	5 GHz		40,48,56,64	36,44,52,60
-#	(depending on the location, not all of these channels may be available
-#	for use)
-#	Please note that 40 MHz channels may switch their primary and secondary
-#	channels if needed or creation of 40 MHz channel maybe rejected based
-#	on overlapping BSSes. These changes are done automatically when hostapd
-#	is setting up the 40 MHz channel.
-# HT-greenfield: [GF] (disabled if not set)
-# Short GI for 20 MHz: [SHORT-GI-20] (disabled if not set)
-# Short GI for 40 MHz: [SHORT-GI-40] (disabled if not set)
-# Tx STBC: [TX-STBC] (disabled if not set)
-# Rx STBC: [RX-STBC1] (one spatial stream), [RX-STBC12] (one or two spatial
-#	streams), or [RX-STBC123] (one, two, or three spatial streams); Rx STBC
-#	disabled if none of these set
-# HT-delayed Block Ack: [DELAYED-BA] (disabled if not set)
-# Maximum A-MSDU length: [MAX-AMSDU-7935] for 7935 octets (3839 octets if not
-#	set)
-# DSSS/CCK Mode in 40 MHz: [DSSS_CCK-40] = allowed (not allowed if not set)
-# 40 MHz intolerant [40-INTOLERANT] (not advertised if not set)
-#   Indicate that 40 MHz channels should not be used in their BSS or in 
-#   surrounding networks. The bit is processed only in the 2.4 GHz band.
-# L-SIG TXOP protection support: [LSIG-TXOP-PROT] (disabled if not set)
-
-# Require stations to support HT PHY (reject association if they do not)
-#require_ht=1
-
-#------------------------------------------------------------------------------
-# Channel number (IEEE 802.11) (default: 0, i.e., not set)
-# Please note that some drivers do not use this value from hostapd and the
-# channel will need to be configured separately with iwconfig.
-#
-# If CONFIG_ACS build option is enabled, the channel can be selected
-# automatically at run time by setting channel=acs_survey or channel=0, both of
-# which will enable the ACS survey based algorithm.
-channel=6
 
 #------------------------------------------------------------------------------
 # ieee80211n: Whether IEEE 802.11n (HT) is enabled
@@ -114,12 +46,8 @@ channel=6
 # Note: You will also need to enable WMM for full HT functionality.
 # Note: hw_mode=g (2.4 GHz) and hw_mode=a (5 GHz) is used to specify the band.
 ieee80211n=1
+# Require stations to support HT PHY (reject association if they do not)
 require_ht=1
-
-# mt7612u - mt7610u (consult iw list)
-# ht_capab=[HT40+][HT40-][SHORT-GI-20][SHORT-GI-40]
-# ht_capab=[LDPC][HT40+][HT40-][SHORT-GI-20][SHORT-GI-40][TX-STBC][RX-STBC1][MAX-AMSDU-3839]
-ht_capab=[LDPC][HT40-][HT40+][SHORT-GI-20][SHORT-GI-40][TX-STBC][RX-STBC1][MAX-AMSDU-3839][DSSS_CCK-40][40-INTOLERANT]
 
 # If set non-zero, require stations to perform scans of overlapping
 # channels to test for stations which would be affected by 40 MHz traffic.
@@ -127,40 +55,6 @@ ht_capab=[LDPC][HT40-][HT40+][SHORT-GI-20][SHORT-GI-40][TX-STBC][RX-STBC1][MAX-A
 # to non-zero allows 2.4 GHz band AP to move dynamically to a 40 MHz channel if
 # no co-existence issues with neighboring devices are found.
 #obss_interval=0
-
-#------------------------------------------------------------------------------
-# ieee80211ac: Whether IEEE 802.11ac (VHT) is enabled
-# 0 = disabled (default)
-# 1 = enabled
-# Note: You will also need to enable WMM for full VHT functionality.
-# Note: hw_mode=a is used to specify that 5 GHz band is used with VHT.
-ieee80211ac=1
-require_vht=1
-# mt7612u (consult iw list)
-# vht_capab=[MAX-MPDU-3895][RXLDPC][SHORT-GI-80][TX-STBC-2BY1][RX-STBC-1][RX-ANTENNA-PATTERN][TX-ANTENNA-PATTERN][MAX-A-MPDU-LEN-EXP3]
-vht_capab=[MAX-MPDU-3895][RXLDPC][SHORT-GI-80][TX-STBC-2BY1][RX-STBC-1][RX-ANTENNA-PATTERN][TX-ANTENNA-PATTERN][MAX-A-MPDU-LEN-EXP0][BF-ANTENNA-2][SOUNDING-DIMENSION-2][MU-BEAMFORMEE][VHT-LINK-ADAPT3]
-
-# Maximum A-MPDU Length Exponent: [MAX-A-MPDU-LEN-EXP0]..[MAX-A-MPDU-LEN-EXP7]
-# Indicates the maximum length of A-MPDU pre-EOF padding that the STA can recv
-# This field is an integer in the range of 0 to 7.
-# The length defined by this field is equal to
-# 2 pow(13 + Maximum A-MPDU Length Exponent) -1 octets
-
-#------------------------------------------------------------------------------
-# 0 = 20 or 40 MHz operating Channel width
-# 1 = 80 MHz channel width
-# 2 = 160 MHz channel width
-# 3 = 80+80 MHz channel width
-vht_oper_chwidth=1
-
-#------------------------------------------------------------------------------
-# center freq = 5 GHz + (5 * index)
-# So index 42 gives center freq 5.210 GHz
-# which is the center channel in 5G band
-# must be one of: 42 58 106 122 138 155
-# note:  picking anything but 36/42 and 149/155 is probably restricted by DFS
-# vht_oper_centr_freq_seg0_idx=42
-# vht_oper_centr_freq_seg0_idx=155
 
 #------------------------------------------------------------------------------
 # Default WMM parameters (IEEE 802.11 draft; 11-03-0504-03-000e):
@@ -247,11 +141,13 @@ ieee80211w=2
 # SAE implementation are required to support group 19 (ECC group defined over a
 # 256-bit prime order field). All groups that are supported by the
 # implementation are enabled by default. This configuration parameter can be
-# used to specify a limited set of allowed groups. The group values are listed
+# used to specify a limited set of allowed groups. 
+# Note that groups 1, 2, 5, 22, 23, and 24 should not be used in production
+# purposes due limited security (see RFC 8247). The group values are listed
 # in the IANA registry:
 # http://www.iana.org/assignments/ipsec-registry/ipsec-registry.xml#ipsec-registry-9
 # If parameter is not set, 19 is the default value.
-sae_groups=19 20 21 25 26
+sae_groups=19 20 21
 
 #------------------------------------------------------------------------------
 # Require MFP for all associations using SAE
@@ -294,6 +190,12 @@ fragm_threshold=-1
 macaddr_acl=0
 
 #------------------------------------------------------------------------------
+# Disassociate stations based on excessive transmission failures or other
+# indications of connection loss. This depends on the driver capabilities and
+# may not be available with all drivers.
+disassoc_low_ack=1
+
+#------------------------------------------------------------------------------
 # Levels (minimum value for logged events):
 #  0 = verbose debugging
 #  1 = debugging
@@ -306,21 +208,59 @@ logger_syslog_level=2
 logger_stdout=-1
 logger_stdout_level=2
 
+# Maximum A-MPDU Length Exponent: [MAX-A-MPDU-LEN-EXP0]..[MAX-A-MPDU-LEN-EXP7]
+# Indicates the maximum length of A-MPDU pre-EOF padding that the STA can recv
+# This field is an integer in the range of 0 to 7.
+# The length defined by this field is equal to
+# 2 pow(13 + Maximum A-MPDU Length Exponent) -1 octets
+
 #------------------------------------------------------------------------------
+# Send empty SSID in beacons and ignore probe request frames that do not
+# specify full SSID, i.e., require stations to know SSID.
+# 0 = disabled (default)
+# 1 = send empty (length=0) SSID in beacon and ignore probe request for
+#     broadcast SSID
+# 2 = clear SSID (ASCII 0), but keep the original length (this may be required
+#     with some clients that do not support empty SSID) and ignore probe
+#     requests for broadcast SSID
+ignore_broadcast_ssid=0
+
+#------------------------------------------------------------------------------
+#------------------------------------------------------------------------------
+# Access Point ID to be used in IEEE 802.11 management frames
+ssid=
+interface=
+# bridge=lbr1
+
+# Country code (ISO/IEC 3166-1). Used to set regulatory domain.
+country_code=
+
+# Channel number (IEEE 802.11) (default: 0, i.e., not set)
+channel=
+ht_capab=
+
 # Operation mode:
 #   a = IEEE 802.11a (5 GHz)
 #   b = IEEE 802.11b (2.4 GHz)
 #   g = IEEE 802.11g (2.4 GHz)
-#  ad = IEEE 802.11ad (60 GHz)
-# Note that a/g options are used with IEEE 802.11n (HT) to specify band). 
-# For IEEE 802.11ac (VHT), this needs to be set to hw_mode=a. 
-# When using ACS (see channel parameter), a special value "any" can be used 
-# to indicate that any support band can be used.
-# This special case is currently supported only with drivers with which|
-# offloaded ACS is used. Default: IEEE 802.11b
-hw_mode=a
-# For WPA3, wpa_key_mgmt is set to SAE instead of WPA-PSK for WPA2
-wpa_key_mgmt=SAE
-# Access Point
-ssid=
+#  ad = IEEE 802.11ad (6 GHz)
+hw_mode=
+
+# ieee80211ac: Whether IEEE 802.11ac (VHT) is enabled
+ieee80211ac=
+require_vht=
+vht_capab=
+
+# 0 = 20 or 40 MHz operating Channel width
+# 1 = 80 MHz channel width
+# 2 = 160 MHz channel width
+# 3 = 80+80 MHz channel width
+vht_oper_chwidth=
+
+# center freq = channel + 6
+# So channel 36 gives center index of 42
+vht_oper_centr_freq_seg0_idx=
+vht_oper_centr_freq_seg1_idx=
+
+wpa_key_mgmt=
 wpa_passphrase=
