Refactor wap to be DRY and functions for clarity

--- a/sample.env
+++ b/sample.env
@@ -1,3 +1,3 @@
-export SCADRIAL_KEY="my_super_good_password!"
-export WAP0_PASS="really_random_and_long_passphrase!"
-export WAP1_PASS="really_random_and_long_passphrase!"
+export SCADRIAL_KEY="my_super_good_password_"
+export wap0_pass="really_random_and_long_passphrase!"
+export wap1_pass="really_random_and_long_passphrase!"
