--- a/scadrial-config-example.yaml
+++ b/scadrial-config-example.yaml
@@ -4,7 +4,7 @@ scadrial:
   # Parameters for the Ubuntu distribution
   dist:
     name: jammy
-    vers: 20.04
+    vers: 22.04
   # Parameters for destination media
   device:
     # Specify loop devices settings
@@ -55,30 +55,136 @@ scadrial:
       enabled: false
       iface: enp3s0
       addrs: 10.16.35.1/24
-    # wireless access point
+    # wireless access points
     wap0:
-      enabled: false
+      # ----------------------------------------------------------------
+      # 5Ghz WIFI WPA3/802.11ac (MT7615 - consult iw list)
+      enabled: true
       iface: wlp1s0
       addrs: 10.16.45.1/24
-      # replace passphrase with something unique
-      pass: 
-      # rename wireless access point as desired
       ssid: 
-      # Country code (ISO/IEC 3166-1). Used to set regulatory domain.
+        # rename wireless access point as desired
       cntry: US
-      # channel=0 for ACS survey-based auto-channel selection
-      # 2.4Ghz - recommended channels: 2, 6, or 11
+        # Country code (ISO/IEC 3166-1). Used to set regulatory domain.
+      width: 1
+        # set maximum channel width
+        #  0 = 20 or 40 MHz operating Channel width
+        #  1 = 80 MHz channel width
+        #  2 = 160 MHz channel width (see notes)
+        #  3 = 80+80 MHz channel width
+        # Notes: 
+        #  * this is kinda crazy - due to regulations, your fancy 802.11ac 
+        #    hardware may be unable to use the highest speeds, so hostapd may
+        #    refuse to use any channels where there's another 5G AP nearby.
+        #  * Also, not all devices support greater than 80 MHz frequencies.
+        #  * Unless ACS - Automatic Channel Selection - is being used (which
+        #    maybe a good idea), both "channel" and "vht_oper_centr_freq_seg0_idx"
+        #    parameters must be set (and also "vht_oper_centr_freq_seg1_idx" 
+        #    for 80+80 vht_oper_chwidth=3 mode).
       channel: 0
+          # channel = 0 for ACS survey-based auto-channel selection
+          # 2.4Ghz - recommended --> 2, 6, or 11
+          # 5Ghz:
+          #  * 20Hz: 36 44 52 60 100 108 116 124 132 140 149 157 165
+          #  * 40Hz: 38 46 54 62 102 110 118 126 134 142 151 159
+      vht_center_idx0: 
+        # center channel in 5G band (channel + 6)
+        # must be one of: 
+        #  * Specified in combination with a 20hz channel option from above
+        #  * 40hz: 38 46 54 62 102 110 118 126 134 142 151 159, 
+        #  * 80hz: 42 58 106 122 138 155
+        # Note:  anything but 36/42 and 149/155 may be restricted by DFS/driver
+        #        DFS options: 52/58, 100/106, 116/122, 132/138
+      vht_center_idx1: 
+        # Similar to index 0, however for a second non-contiguous 80hz band
+      mode: vht
+        # set performance mode (ht or vht) based on channel width:
+        #  ht:  High Throughput mode, aka 802.11n
+        #    * 20 MHz: max speed of 54 Mbits/s
+        #    * 40 MHz: max speed of 300 Mbits/s
+        #    *   hw_mode=g; ieee80211ac=0; require_vht=0
+        #  vht: Very High Throughput mode, aka 802.11ac 
+        #    * 40 MHz: max speed of 433Mbps Mbits/s
+        #    * 80 MHz: max speed of 867Mbps Mbits/s
+        #    * 160 MHz: max speed of 1734Mbps Mbits/s
+        #    *   hw_mode=a; ieee80211ac=1; require_vht=1
+      ht_capab: [HT40+][HT40-][LDPC][SHORT-GI-20][SHORT-GI-40][TX-STBC][RX-STBC1][MAX-AMSDU-3839]
+        # Enable hardware capabilities
+        # Notes:
+        #  * these values vary by device
+        #  * many desired features are disabled unless specified
+        #  * all specified capabilites must be compatible with your device and
+        #    your device driver 
+      vht_capab: [VHT160-80PLUS80][RXLDPC][SHORT-GI-80][TX-STBC-2BY1][RX-STBC-1][RX-ANTENNA-PATTERN][TX-ANTENNA-PATTERN][MAX-MPDU-3895][MAX-A-MPDU-LEN-EXP3][VHT-LINK-ADAPT3]
+        #  * vht capabilites build on ht capabilities
+      key_mgmt: SAE
+        # Must be one of:
+        # wpa2: WPA-PSK
+        # wpa3: SAE
+        # both: WPA-PSK SAE
     wap1:
-      enabled: false
-      iface: wlx00c0caaf5774
-      addrs: 10.16.55.1/24
-      # replace passphrase with something unique
-      pass: 
-      # rename wireless access point as desired
+      # ----------------------------------------------------------------
+      # 5Ghz WIFI WPA2/802.11n (MT7612 - consult iw list)
+      enabled: true
+      iface: wlx00c0caaed1b1
+      addrs: 10.16.50.1/24
       ssid: 
-      # Country code (ISO/IEC 3166-1). Used to set regulatory domain.
+        # rename wireless access point as desired
       cntry: US
-      # channel=0 for ACS survey-based auto-channel selection
-      # 2.4Ghz - recommended channels: 2, 6, or 11
-      channel: 6
+        # Country code (ISO/IEC 3166-1). Used to set regulatory domain.
+      width: 0
+        # set maximum channel width
+        #  0 = 20 or 40 MHz operating Channel width
+        #  1 = 80 MHz channel width
+        #  2 = 160 MHz channel width (see notes)
+        #  3 = 80+80 MHz channel width
+        # Notes: 
+        #  * this is kinda crazy - due to regulations, your fancy 802.11ac 
+        #    hardware may be unable to use the highest speeds, so hostapd may
+        #    refuse to use any channels where there's another 5G AP nearby.
+        #  * Also, not all devices support greater than 80 MHz frequencies.
+        #  * Unless ACS - Automatic Channel Selection - is being used (which
+        #    maybe a good idea), both "channel" and "vht_oper_centr_freq_seg0_idx"
+        #    parameters must be set (and also "vht_oper_centr_freq_seg1_idx" 
+        #    for 80+80 vht_oper_chwidth=3 mode).
+      channel: 0
+        # channel = 0 for ACS survey-based auto-channel selection
+        # 2.4Ghz - recommended --> 2, 6, or 11
+        # 5Ghz:
+        #  * 20Hz: 36 44 52 60 100 108 116 124 132 140 149 157 165
+        #  * 40Hz: 38 46 54 62 102 110 118 126 134 142 151 159
+      vht_center_idx0: 
+        # center channel in 5G band (channel + 6)
+        # must be one of: 
+        #  * Specified in combination with a 20hz channel option from above
+        #  * 40hz: 38 46 54 62 102 110 118 126 134 142 151 159, 
+        #  * 80hz: 42 58 106 122 138 155
+        # Note:  anything but 36/42 and 149/155 may be restricted by DFS/driver
+        #        DFS options: 52/58, 100/106, 116/122, 132/138
+      vht_center_idx1: 
+        # Similar to index 0, however for a second non-contiguous 80hz band
+      mode: ht
+        # set performance mode (ht or vht) based on channel width:
+        #  ht:  High Throughput mode, aka 802.11n
+        #    * 20 MHz: max speed of 54 Mbits/s
+        #    * 40 MHz: max speed of 300 Mbits/s
+        #    *   hw_mode=g; ieee80211ac=0; require_vht=0
+        #  vht: Very High Throughput mode, aka 802.11ac 
+        #    * 40 MHz: max speed of 433Mbps Mbits/s
+        #    * 80 MHz: max speed of 867Mbps Mbits/s
+        #    * 160 MHz: max speed of 1734Mbps Mbits/s
+        #    *   hw_mode=a; ieee80211ac=1; require_vht=1
+      ht_capab: [HT40+][HT40-][LDPC][SHORT-GI-20][SHORT-GI-40][TX-STBC][RX-STBC1][MAX-AMSDU-3839]
+        # Enable hardware capabilities
+        # Notes:
+        #  * these values vary by device
+        #  * many desired features are disabled unless specified
+        #  * all specified capabilites must be compatible with your device and
+        #    your device driver 
+      vht_capab: [RXLDPC][SHORT-GI-80][TX-STBC-2BY1][RX-STBC-1][RX-ANTENNA-PATTERN][TX-ANTENNA-PATTERN][MAX-MPDU-3895][MAX-A-MPDU-LEN-EXP3][VHT-LINK-ADAPT3]
+        #  * vht capabilites build on ht capabilities
+      key_mgmt: WPA-PSK SAE
+        # Must be one of:
+        # wpa2: WPA-PSK
+        # wpa3: SAE
+        # both: WPA-PSK SAE
